e3 中间代码生成/y.output
Terminals which are not used

   T_Lineend
   T_OR
   T_AND
   '.'
   T_ELSE
   T_IFX


State 0 conflicts: 1 shift/reduce
State 1 conflicts: 1 reduce/reduce
State 3 conflicts: 6 shift/reduce, 1 reduce/reduce
State 11 conflicts: 1 reduce/reduce
State 13 conflicts: 6 shift/reduce
State 24 conflicts: 1 reduce/reduce
State 36 conflicts: 22 shift/reduce, 1 reduce/reduce
State 38 conflicts: 29 reduce/reduce
State 59 conflicts: 6 shift/reduce
State 65 conflicts: 2 shift/reduce
State 80 conflicts: 2 shift/reduce
State 81 conflicts: 2 shift/reduce
State 88 conflicts: 2 shift/reduce
State 89 conflicts: 2 shift/reduce
State 129 conflicts: 2 shift/reduce
State 130 conflicts: 2 shift/reduce
State 131 conflicts: 2 shift/reduce
State 132 conflicts: 2 shift/reduce
State 133 conflicts: 16 shift/reduce
State 134 conflicts: 16 shift/reduce
State 135 conflicts: 2 shift/reduce
State 136 conflicts: 2 shift/reduce
State 137 conflicts: 2 shift/reduce
State 138 conflicts: 2 shift/reduce
State 139 conflicts: 2 shift/reduce
State 140 conflicts: 2 shift/reduce
State 141 conflicts: 2 shift/reduce
State 155 conflicts: 21 shift/reduce, 1 reduce/reduce
State 158 conflicts: 29 reduce/reduce
State 162 conflicts: 1 shift/reduce
State 163 conflicts: 1 shift/reduce
State 164 conflicts: 21 shift/reduce, 1 reduce/reduce
State 167 conflicts: 21 shift/reduce, 1 reduce/reduce


Grammar

    0 $accept: Program $end

    1 Program: Fieldlist
    2        | Fieldlist Function
    3        | error

    4 Function: Type FuncName '(' FormalParams ')' StmtBlock

    5 FuncName: T_Identifier

    6 Fieldlist: Fieldlist Field
    7          | /* empty */
    8          | error

    9 Field: Variable
   10      | Function

   11 VariableDecl: Type T_Identifier
   12             | error

   13 Variable: /* empty */
   14         | Variable VariableDecl ';'
   15         | error

   16 Type: T_Int
   17     | T_Double
   18     | T_Boolean
   19     | T_String
   20     | T_Void
   21     | Type '[' ']'
   22     | error

   23 FormalParams: /* empty */
   24             | _Params

   25 _Params: Type T_Identifier
   26        | _Params ',' Type T_Identifier
   27        | /* empty */

   28 StmtBlock: '{' Stmtlist '}'
   29          | error

   30 Stmtlist: Stmtlist Stmt
   31         | /* empty */

   32 Stmt: Variable
   33     | SimpleStmt ';'
   34     | IfStmt
   35     | WhileStmt
   36     | ForStmt
   37     | BreakStmt ';'
   38     | ReturnStmt ';'
   39     | PrintStmt ';'
   40     | StmtBlock

   41 SimpleStmt: LValue '=' Expr
   42           | IncrementStmt
   43           | DecrementStmt
   44           | Call
   45           | /* empty */
   46           | error

   47 IncrementStmt: LValue T_Ic

   48 DecrementStmt: LValue T_Dc

   49 LValue: T_Identifier
   50       | Expr '[' Expr ']'
   51       | error

   52 Call: T_Identifier '(' ActualParams ')'

   53 ActualParams: ExprMore
   54             | /* empty */

   55 ExprMore: Expr
   56         | ExprMore ',' Expr

   57 ForStmt: T_For '(' SimpleStmt ';' BoolExpr ';' SimpleStmt ')' Stmt

   58 WhileStmt: While '(' BoolExpr ')' Do StmtBlock EndWhile

   59 While: T_While

   60 Do: /* empty */

   61 EndWhile: /* empty */

   62 IfStmt: If '(' BoolExpr ')' Then StmtBlock EndThen EndIf
   63       | If '(' BoolExpr ')' Then Stmt EndThen EndIf
   64       | If '(' BoolExpr ')' Then StmtBlock EndThen T_Else StmtBlock EndIf
   65       | If '(' BoolExpr ')' Then Stmt EndThen T_Else Stmt EndIf

   66 If: T_If

   67 Then: /* empty */

   68 EndThen: /* empty */

   69 EndIf: /* empty */

   70 ReturnStmt: T_Return
   71           | T_Return Expr

   72 BreakStmt: T_Break

   73 PrintStmt: T_Print '(' ExprMore ')'

   74 BoolExpr: Expr

   75 Expr: Constant
   76     | LValue
   77     | Call
   78     | '(' Expr ')'
   79     | Expr '+' Expr
   80     | Expr '-' Expr
   81     | Expr '*' Expr
   82     | Expr '/' Expr
   83     | Expr '%' Expr
   84     | '-' Expr
   85     | Expr T_Dc
   86     | T_Dc Expr
   87     | Expr T_Ic
   88     | T_Ic Expr
   89     | Expr '<' Expr
   90     | Expr T_Le Expr
   91     | Expr '>' Expr
   92     | Expr T_Ge Expr
   93     | Expr T_Eq Expr
   94     | Expr T_Ne Expr
   95     | Expr T_And Expr
   96     | Expr T_Or Expr
   97     | '!' Expr
   98     | T_ReadInteger '(' LValue ')'
   99     | T_ReadLine '(' LValue ')'

  100 Constant: T_IntConstant
  101         | T_DoubleConstant
  102         | T_BooleanConstant
  103         | T_StringConstant
  104         | T_Null


Terminals, with rules where they appear

$end (0) 0
'!' (33) 97
'%' (37) 83
'(' (40) 4 52 57 58 62 63 64 65 73 78 98 99
')' (41) 4 52 57 58 62 63 64 65 73 78 98 99
'*' (42) 81
'+' (43) 79
',' (44) 26 56
'-' (45) 80 84
'.' (46)
'/' (47) 82
';' (59) 14 33 37 38 39 57
'<' (60) 89
'=' (61) 41
'>' (62) 91
'[' (91) 21 50
']' (93) 21 50
'{' (123) 28
'}' (125) 28
error (256) 3 8 12 15 22 29 46 51
T_Le (258) 90
T_Ge (259) 92
T_Eq (260) 93
T_Ne (261) 94
T_Ic (262) 47 87 88
T_Dc (263) 48 85 86
T_And (264) 95
T_Or (265) 96
T_Void (266) 20
T_Int (267) 16
T_Double (268) 17
T_Boolean (269) 18
T_String (270) 19
T_Null (271) 104
T_For (272) 57
T_While (273) 59
T_If (274) 66
T_Else (275) 64 65
T_Return (276) 70 71
T_Break (277) 72
T_Print (278) 73
T_ReadInteger (279) 98
T_ReadLine (280) 99
T_IntConstant (281) 100
T_DoubleConstant (282) 101
T_StringConstant (283) 103
T_Identifier (284) 5 11 25 26 49 52
T_BooleanConstant (285) 102
T_Lineend (286)
T_OR (287)
T_AND (288)
T_ELSE (289)
T_IFX (290)


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
Program (55)
    on left: 1 2 3, on right: 0
Function (56)
    on left: 4, on right: 2 10
FuncName (57)
    on left: 5, on right: 4
Fieldlist (58)
    on left: 6 7 8, on right: 1 2 6
Field (59)
    on left: 9 10, on right: 6
VariableDecl (60)
    on left: 11 12, on right: 14
Variable (61)
    on left: 13 14 15, on right: 9 14 32
Type (62)
    on left: 16 17 18 19 20 21 22, on right: 4 11 21 25 26
FormalParams (63)
    on left: 23 24, on right: 4
_Params (64)
    on left: 25 26 27, on right: 24 26
StmtBlock (65)
    on left: 28 29, on right: 4 40 58 62 64
Stmtlist (66)
    on left: 30 31, on right: 28 30
Stmt (67)
    on left: 32 33 34 35 36 37 38 39 40, on right: 30 57 63 65
SimpleStmt (68)
    on left: 41 42 43 44 45 46, on right: 33 57
IncrementStmt (69)
    on left: 47, on right: 42
DecrementStmt (70)
    on left: 48, on right: 43
LValue (71)
    on left: 49 50 51, on right: 41 47 48 76 98 99
Call (72)
    on left: 52, on right: 44 77
ActualParams (73)
    on left: 53 54, on right: 52
ExprMore (74)
    on left: 55 56, on right: 53 56 73
ForStmt (75)
    on left: 57, on right: 36
WhileStmt (76)
    on left: 58, on right: 35
While (77)
    on left: 59, on right: 58
Do (78)
    on left: 60, on right: 58
EndWhile (79)
    on left: 61, on right: 58
IfStmt (80)
    on left: 62 63 64 65, on right: 34
If (81)
    on left: 66, on right: 62 63 64 65
Then (82)
    on left: 67, on right: 62 63 64 65
EndThen (83)
    on left: 68, on right: 62 63 64 65
EndIf (84)
    on left: 69, on right: 62 63 64 65
ReturnStmt (85)
    on left: 70 71, on right: 38
BreakStmt (86)
    on left: 72, on right: 37
PrintStmt (87)
    on left: 73, on right: 39
BoolExpr (88)
    on left: 74, on right: 57 58 62 63 64 65
Expr (89)
    on left: 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92
    93 94 95 96 97 98 99, on right: 41 50 55 56 71 74 78 79 80 81 82
    83 84 85 86 87 88 89 90 91 92 93 94 95 96 97
Constant (90)
    on left: 100 101 102 103 104, on right: 75


state 0

    0 $accept: . Program $end

    error  shift, and go to state 1

    $end       reduce using rule 7 (Fieldlist)
    error      [reduce using rule 7 (Fieldlist)]
    T_Void     reduce using rule 7 (Fieldlist)
    T_Int      reduce using rule 7 (Fieldlist)
    T_Double   reduce using rule 7 (Fieldlist)
    T_Boolean  reduce using rule 7 (Fieldlist)
    T_String   reduce using rule 7 (Fieldlist)

    Program    go to state 2
    Fieldlist  go to state 3


state 1

    3 Program: error .
    8 Fieldlist: error .

    $end      reduce using rule 3 (Program)
    $end      [reduce using rule 8 (Fieldlist)]
    $default  reduce using rule 8 (Fieldlist)


state 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


state 3

    1 Program: Fieldlist .
    2        | Fieldlist . Function
    6 Fieldlist: Fieldlist . Field

    error      shift, and go to state 5
    T_Void     shift, and go to state 6
    T_Int      shift, and go to state 7
    T_Double   shift, and go to state 8
    T_Boolean  shift, and go to state 9
    T_String   shift, and go to state 10

    $end       reduce using rule 1 (Program)
    $end       [reduce using rule 13 (Variable)]
    error      [reduce using rule 13 (Variable)]
    T_Void     [reduce using rule 13 (Variable)]
    T_Int      [reduce using rule 13 (Variable)]
    T_Double   [reduce using rule 13 (Variable)]
    T_Boolean  [reduce using rule 13 (Variable)]
    T_String   [reduce using rule 13 (Variable)]

    Function  go to state 11
    Field     go to state 12
    Variable  go to state 13
    Type      go to state 14


state 4

    0 $accept: Program $end .

    $default  accept


state 5

   15 Variable: error .
   22 Type: error .

    T_Identifier  reduce using rule 22 (Type)
    '['           reduce using rule 22 (Type)
    $default      reduce using rule 15 (Variable)


state 6

   20 Type: T_Void .

    $default  reduce using rule 20 (Type)


state 7

   16 Type: T_Int .

    $default  reduce using rule 16 (Type)


state 8

   17 Type: T_Double .

    $default  reduce using rule 17 (Type)


state 9

   18 Type: T_Boolean .

    $default  reduce using rule 18 (Type)


state 10

   19 Type: T_String .

    $default  reduce using rule 19 (Type)


state 11

    2 Program: Fieldlist Function .
   10 Field: Function .

    $end      reduce using rule 2 (Program)
    $end      [reduce using rule 10 (Field)]
    $default  reduce using rule 10 (Field)


state 12

    6 Fieldlist: Fieldlist Field .

    $default  reduce using rule 6 (Fieldlist)


state 13

    9 Field: Variable .
   14 Variable: Variable . VariableDecl ';'

    error      shift, and go to state 15
    T_Void     shift, and go to state 6
    T_Int      shift, and go to state 7
    T_Double   shift, and go to state 8
    T_Boolean  shift, and go to state 9
    T_String   shift, and go to state 10

    $end       reduce using rule 9 (Field)
    error      [reduce using rule 9 (Field)]
    T_Void     [reduce using rule 9 (Field)]
    T_Int      [reduce using rule 9 (Field)]
    T_Double   [reduce using rule 9 (Field)]
    T_Boolean  [reduce using rule 9 (Field)]
    T_String   [reduce using rule 9 (Field)]

    VariableDecl  go to state 16
    Type          go to state 17


state 14

    4 Function: Type . FuncName '(' FormalParams ')' StmtBlock
   21 Type: Type . '[' ']'

    T_Identifier  shift, and go to state 18
    '['           shift, and go to state 19

    FuncName  go to state 20


state 15

   12 VariableDecl: error .
   22 Type: error .

    ';'       reduce using rule 12 (VariableDecl)
    $default  reduce using rule 22 (Type)


state 16

   14 Variable: Variable VariableDecl . ';'

    ';'  shift, and go to state 21


state 17

   11 VariableDecl: Type . T_Identifier
   21 Type: Type . '[' ']'

    T_Identifier  shift, and go to state 22
    '['           shift, and go to state 19


state 18

    5 FuncName: T_Identifier .

    $default  reduce using rule 5 (FuncName)


state 19

   21 Type: Type '[' . ']'

    ']'  shift, and go to state 23


state 20

    4 Function: Type FuncName . '(' FormalParams ')' StmtBlock

    '('  shift, and go to state 24


state 21

   14 Variable: Variable VariableDecl ';' .

    $default  reduce using rule 14 (Variable)


state 22

   11 VariableDecl: Type T_Identifier .

    $default  reduce using rule 11 (VariableDecl)


state 23

   21 Type: Type '[' ']' .

    $default  reduce using rule 21 (Type)


state 24

    4 Function: Type FuncName '(' . FormalParams ')' StmtBlock

    error      shift, and go to state 25
    T_Void     shift, and go to state 6
    T_Int      shift, and go to state 7
    T_Double   shift, and go to state 8
    T_Boolean  shift, and go to state 9
    T_String   shift, and go to state 10

    ')'  reduce using rule 23 (FormalParams)
    ')'  [reduce using rule 27 (_Params)]
    ','  reduce using rule 27 (_Params)

    Type          go to state 26
    FormalParams  go to state 27
    _Params       go to state 28


state 25

   22 Type: error .

    $default  reduce using rule 22 (Type)


state 26

   21 Type: Type . '[' ']'
   25 _Params: Type . T_Identifier

    T_Identifier  shift, and go to state 29
    '['           shift, and go to state 19


state 27

    4 Function: Type FuncName '(' FormalParams . ')' StmtBlock

    ')'  shift, and go to state 30


state 28

   24 FormalParams: _Params .
   26 _Params: _Params . ',' Type T_Identifier

    ','  shift, and go to state 31

    $default  reduce using rule 24 (FormalParams)


state 29

   25 _Params: Type T_Identifier .

    $default  reduce using rule 25 (_Params)


state 30

    4 Function: Type FuncName '(' FormalParams ')' . StmtBlock

    error  shift, and go to state 32
    '{'    shift, and go to state 33

    StmtBlock  go to state 34


state 31

   26 _Params: _Params ',' . Type T_Identifier

    error      shift, and go to state 25
    T_Void     shift, and go to state 6
    T_Int      shift, and go to state 7
    T_Double   shift, and go to state 8
    T_Boolean  shift, and go to state 9
    T_String   shift, and go to state 10

    Type  go to state 35


state 32

   29 StmtBlock: error .

    $default  reduce using rule 29 (StmtBlock)


state 33

   28 StmtBlock: '{' . Stmtlist '}'

    $default  reduce using rule 31 (Stmtlist)

    Stmtlist  go to state 36


state 34

    4 Function: Type FuncName '(' FormalParams ')' StmtBlock .

    $default  reduce using rule 4 (Function)


state 35

   21 Type: Type . '[' ']'
   26 _Params: _Params ',' Type . T_Identifier

    T_Identifier  shift, and go to state 37
    '['           shift, and go to state 19


state 36

   28 StmtBlock: '{' Stmtlist . '}'
   30 Stmtlist: Stmtlist . Stmt

    error              shift, and go to state 38
    T_Ic               shift, and go to state 39
    T_Dc               shift, and go to state 40
    T_Null             shift, and go to state 41
    T_For              shift, and go to state 42
    T_While            shift, and go to state 43
    T_If               shift, and go to state 44
    T_Return           shift, and go to state 45
    T_Break            shift, and go to state 46
    T_Print            shift, and go to state 47
    T_ReadInteger      shift, and go to state 48
    T_ReadLine         shift, and go to state 49
    T_IntConstant      shift, and go to state 50
    T_DoubleConstant   shift, and go to state 51
    T_StringConstant   shift, and go to state 52
    T_Identifier       shift, and go to state 53
    T_BooleanConstant  shift, and go to state 54
    '-'                shift, and go to state 55
    '!'                shift, and go to state 56
    '('                shift, and go to state 57
    '{'                shift, and go to state 33
    '}'                shift, and go to state 58

    error              [reduce using rule 13 (Variable)]
    T_Ic               [reduce using rule 13 (Variable)]
    T_Dc               [reduce using rule 13 (Variable)]
    T_Void             reduce using rule 13 (Variable)
    T_Int              reduce using rule 13 (Variable)
    T_Double           reduce using rule 13 (Variable)
    T_Boolean          reduce using rule 13 (Variable)
    T_String           reduce using rule 13 (Variable)
    T_Null             [reduce using rule 13 (Variable)]
    T_For              [reduce using rule 13 (Variable)]
    T_While            [reduce using rule 13 (Variable)]
    T_If               [reduce using rule 13 (Variable)]
    T_Return           [reduce using rule 13 (Variable)]
    T_Break            [reduce using rule 13 (Variable)]
    T_Print            [reduce using rule 13 (Variable)]
    T_ReadInteger      [reduce using rule 13 (Variable)]
    T_ReadLine         [reduce using rule 13 (Variable)]
    T_IntConstant      [reduce using rule 13 (Variable)]
    T_DoubleConstant   [reduce using rule 13 (Variable)]
    T_StringConstant   [reduce using rule 13 (Variable)]
    T_Identifier       [reduce using rule 13 (Variable)]
    T_BooleanConstant  [reduce using rule 13 (Variable)]
    '-'                [reduce using rule 13 (Variable)]
    '!'                [reduce using rule 13 (Variable)]
    '('                [reduce using rule 13 (Variable)]
    ';'                reduce using rule 13 (Variable)
    ';'                [reduce using rule 45 (SimpleStmt)]
    '{'                [reduce using rule 13 (Variable)]
    '}'                [reduce using rule 13 (Variable)]

    Variable       go to state 59
    StmtBlock      go to state 60
    Stmt           go to state 61
    SimpleStmt     go to state 62
    IncrementStmt  go to state 63
    DecrementStmt  go to state 64
    LValue         go to state 65
    Call           go to state 66
    ForStmt        go to state 67
    WhileStmt      go to state 68
    While          go to state 69
    IfStmt         go to state 70
    If             go to state 71
    ReturnStmt     go to state 72
    BreakStmt      go to state 73
    PrintStmt      go to state 74
    Expr           go to state 75
    Constant       go to state 76


state 37

   26 _Params: _Params ',' Type T_Identifier .

    $default  reduce using rule 26 (_Params)


state 38

   15 Variable: error .
   29 StmtBlock: error .
   46 SimpleStmt: error .
   51 LValue: error .

    error              reduce using rule 15 (Variable)
    error              [reduce using rule 29 (StmtBlock)]
    T_Le               reduce using rule 51 (LValue)
    T_Ge               reduce using rule 51 (LValue)
    T_Eq               reduce using rule 51 (LValue)
    T_Ne               reduce using rule 51 (LValue)
    T_Ic               reduce using rule 15 (Variable)
    T_Ic               [reduce using rule 29 (StmtBlock)]
    T_Ic               [reduce using rule 51 (LValue)]
    T_Dc               reduce using rule 15 (Variable)
    T_Dc               [reduce using rule 29 (StmtBlock)]
    T_Dc               [reduce using rule 51 (LValue)]
    T_And              reduce using rule 51 (LValue)
    T_Or               reduce using rule 51 (LValue)
    T_Void             reduce using rule 15 (Variable)
    T_Void             [reduce using rule 29 (StmtBlock)]
    T_Int              reduce using rule 15 (Variable)
    T_Int              [reduce using rule 29 (StmtBlock)]
    T_Double           reduce using rule 15 (Variable)
    T_Double           [reduce using rule 29 (StmtBlock)]
    T_Boolean          reduce using rule 15 (Variable)
    T_Boolean          [reduce using rule 29 (StmtBlock)]
    T_String           reduce using rule 15 (Variable)
    T_String           [reduce using rule 29 (StmtBlock)]
    T_Null             reduce using rule 15 (Variable)
    T_Null             [reduce using rule 29 (StmtBlock)]
    T_For              reduce using rule 15 (Variable)
    T_For              [reduce using rule 29 (StmtBlock)]
    T_While            reduce using rule 15 (Variable)
    T_While            [reduce using rule 29 (StmtBlock)]
    T_If               reduce using rule 15 (Variable)
    T_If               [reduce using rule 29 (StmtBlock)]
    T_Else             reduce using rule 15 (Variable)
    T_Else             [reduce using rule 29 (StmtBlock)]
    T_Return           reduce using rule 15 (Variable)
    T_Return           [reduce using rule 29 (StmtBlock)]
    T_Break            reduce using rule 15 (Variable)
    T_Break            [reduce using rule 29 (StmtBlock)]
    T_Print            reduce using rule 15 (Variable)
    T_Print            [reduce using rule 29 (StmtBlock)]
    T_ReadInteger      reduce using rule 15 (Variable)
    T_ReadInteger      [reduce using rule 29 (StmtBlock)]
    T_ReadLine         reduce using rule 15 (Variable)
    T_ReadLine         [reduce using rule 29 (StmtBlock)]
    T_IntConstant      reduce using rule 15 (Variable)
    T_IntConstant      [reduce using rule 29 (StmtBlock)]
    T_DoubleConstant   reduce using rule 15 (Variable)
    T_DoubleConstant   [reduce using rule 29 (StmtBlock)]
    T_StringConstant   reduce using rule 15 (Variable)
    T_StringConstant   [reduce using rule 29 (StmtBlock)]
    T_Identifier       reduce using rule 15 (Variable)
    T_Identifier       [reduce using rule 29 (StmtBlock)]
    T_BooleanConstant  reduce using rule 15 (Variable)
    T_BooleanConstant  [reduce using rule 29 (StmtBlock)]
    '='                reduce using rule 51 (LValue)
    '<'                reduce using rule 51 (LValue)
    '>'                reduce using rule 51 (LValue)
    '+'                reduce using rule 51 (LValue)
    '-'                reduce using rule 15 (Variable)
    '-'                [reduce using rule 29 (StmtBlock)]
    '-'                [reduce using rule 51 (LValue)]
    '*'                reduce using rule 51 (LValue)
    '/'                reduce using rule 51 (LValue)
    '%'                reduce using rule 51 (LValue)
    '!'                reduce using rule 15 (Variable)
    '!'                [reduce using rule 29 (StmtBlock)]
    '('                reduce using rule 15 (Variable)
    '('                [reduce using rule 29 (StmtBlock)]
    '['                reduce using rule 51 (LValue)
    ';'                reduce using rule 15 (Variable)
    ';'                [reduce using rule 29 (StmtBlock)]
    ';'                [reduce using rule 46 (SimpleStmt)]
    '{'                reduce using rule 15 (Variable)
    '{'                [reduce using rule 29 (StmtBlock)]
    '}'                reduce using rule 15 (Variable)
    '}'                [reduce using rule 29 (StmtBlock)]
    $default           reduce using rule 15 (Variable)


state 39

   88 Expr: T_Ic . Expr

    error              shift, and go to state 77
    T_Ic               shift, and go to state 39
    T_Dc               shift, and go to state 40
    T_Null             shift, and go to state 41
    T_ReadInteger      shift, and go to state 48
    T_ReadLine         shift, and go to state 49
    T_IntConstant      shift, and go to state 50
    T_DoubleConstant   shift, and go to state 51
    T_StringConstant   shift, and go to state 52
    T_Identifier       shift, and go to state 53
    T_BooleanConstant  shift, and go to state 54
    '-'                shift, and go to state 55
    '!'                shift, and go to state 56
    '('                shift, and go to state 57

    LValue    go to state 78
    Call      go to state 79
    Expr      go to state 80
    Constant  go to state 76


state 40

   86 Expr: T_Dc . Expr

    error              shift, and go to state 77
    T_Ic               shift, and go to state 39
    T_Dc               shift, and go to state 40
    T_Null             shift, and go to state 41
    T_ReadInteger      shift, and go to state 48
    T_ReadLine         shift, and go to state 49
    T_IntConstant      shift, and go to state 50
    T_DoubleConstant   shift, and go to state 51
    T_StringConstant   shift, and go to state 52
    T_Identifier       shift, and go to state 53
    T_BooleanConstant  shift, and go to state 54
    '-'                shift, and go to state 55
    '!'                shift, and go to state 56
    '('                shift, and go to state 57
